added print days before cleaning in TaskDetailsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="forthmonth">4 month</string>
     <string name="days">days</string>
     <string name="done">done</string>
+    <string name="cleaningafter">Cleaning after:</string>
 
 </resources>
